# bayesjax

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  conjugate.ipynb  example.ipynb  make.bat
src/bayesjax/: __init__.py
src/bayesjax/conjugate/: base.py  models.py
src/bayesjax/core/: base.py  diagnostics.py  utils.py
src/bayesjax/distributions/: continuous.py
src/bayesjax/models/conjugate/: base.py  beta_binomial.py  categorical_dirichlet.py  normal_univariate.py
src/bayesjax/models/mixture_models/: normal_univariate.py
tests/: fullgibbs_normal1.py  test_bayesjax.py
