[tool.poetry]
name = "bayesjax"
version = "0.1.0"
description = "MCMC for Bayesian models in JAX"
authors = ["Sunrit Chakraborty"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.6.2"
jaxlib = "^0.6.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
